// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FighterList renders with empty items array 1`] = `
<Styled(SegmentGroup)>
  <React.Fragment>
    <Fighter
      key="0"
    />
    <Fighter
      key="1"
    />
    <Fighter
      key="2"
    />
  </React.Fragment>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with four items 1`] = `
<Styled(SegmentGroup)>
  <Fighter
    index={0}
    item={
      Object {
        "id": 0,
        "name": "Item: 0",
      }
    }
    key="0"
  />
  <Fighter
    index={1}
    item={
      Object {
        "id": 1,
        "name": "Item: 1",
      }
    }
    key="1"
  />
  <Fighter
    index={2}
    item={
      Object {
        "id": 2,
        "name": "Item: 2",
      }
    }
    key="2"
  />
  <Fighter
    index={3}
    item={
      Object {
        "id": 3,
        "name": "Item: 3",
      }
    }
    key="3"
  />
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with no props 1`] = `
<Styled(SegmentGroup)>
  <React.Fragment>
    <Fighter
      key="0"
    />
    <Fighter
      key="1"
    />
    <Fighter
      key="2"
    />
  </React.Fragment>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with one item 1`] = `
<Styled(SegmentGroup)>
  <Fighter
    index={0}
    item={
      Object {
        "id": 0,
        "name": "Item: 0",
      }
    }
    key="0"
  />
  <React.Fragment>
    <Fighter
      key="0"
    />
    <Fighter
      key="1"
    />
  </React.Fragment>
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with three items 1`] = `
<Styled(SegmentGroup)>
  <Fighter
    index={0}
    item={
      Object {
        "id": 0,
        "name": "Item: 0",
      }
    }
    key="0"
  />
  <Fighter
    index={1}
    item={
      Object {
        "id": 1,
        "name": "Item: 1",
      }
    }
    key="1"
  />
  <Fighter
    index={2}
    item={
      Object {
        "id": 2,
        "name": "Item: 2",
      }
    }
    key="2"
  />
</Styled(SegmentGroup)>
`;

exports[`FighterList renders with two items 1`] = `
<Styled(SegmentGroup)>
  <Fighter
    index={0}
    item={
      Object {
        "id": 0,
        "name": "Item: 0",
      }
    }
    key="0"
  />
  <Fighter
    index={1}
    item={
      Object {
        "id": 1,
        "name": "Item: 1",
      }
    }
    key="1"
  />
  <React.Fragment>
    <Fighter
      key="0"
    />
  </React.Fragment>
</Styled(SegmentGroup)>
`;
